add toolbar attribute

--- a/src/components/customrtf.component
+++ b/src/components/customrtf.component
@@ -1,7 +1,9 @@
 <apex:component selfClosing="true">
     <apex:attribute name="targetclass" description="class for the target textarea" type="string" required="true"/>
     <apex:attribute name="imageupload" type="Boolean" default="false" description="set false if you don't want the image upload options"/>
-    <apex:attribute name="uniqueid" type="String" default="" description="unique Identifier needed when using multiple components"/>
+    <apex:attribute name="uniqueid" type="String" default="" description="unique Identifier, needed when using multiple components"/>
+    <apex:attribute name="toolbar" type="String" default="Visualforce" description="valid values are Visualforce,HomePageComponent,SalesforceBasic,EmailMultiFormat,Email,SalesforceLight,Knowledge,KnowledgeWithIframes,ServiceCommunity"/>
+    
     <apex:includeScript value="{!URLFOR($Resource.customrtf,'/js/ckeditor.js')}"/>
     <script>
         function initRTF{!uniqueid}(){
@@ -21,7 +23,7 @@
                 height: '225',
                 bodyId: nm + '_rta_body',
                 extraPlugins: "{!IF(imageupload,'sfdcImage,sfdcImagePaste,','')}sfdcSwitchToText,iframedialog,MediaEmbed,smartLink",
-                toolbar: 'Visualforce',
+                toolbar: '{!toolbar}',
                 sharedSpaces: {
                     top: 'cke_topSpace',
                     bottom: ' cke_bottomSpace'
